app/assets/stylesheets/participation.scss
/* ... */
.debate {

  .votes {
    @include votes;
    border: 1px solid $votes-border;
    margin: 0 rem-calc(-12);

    @media (min-width: $small-breakpoint) {
      border-top-left-radius: 3px;
      border-bottom-left-radius: 3px;
      margin: 0 rem-calc(-25) 0 rem-calc(12);
    }

    &:after {
      content: none;
      position: absolute;
      display: block;
      border-style: solid;
      border-color: #166387 transparent transparent transparent;
      bottom: -14px;
      border-left-width: 0;
      border-right-color: transparent;
      right: -1px;
      border-width: 13px 13px 0 0;

      @media (min-width: $small-breakpoint) {
        content: "";
      }
    }

    .total-votes {
      display: inline-block;
      line-height: $line-height;
      margin-left: rem-calc(24);
      padding-top: rem-calc(12);
      vertical-align: top;

      @media (min-width: $small-breakpoint) {
        display: block;
        float: none;
        line-height: $line-height*2;
        margin-left: 0;
        padding-top: 0;
      }
    }

    @media (min-width: $small-breakpoint) {
      .like, .unlike {

        span {
          display: block;
          line-height: $line-height/2;
        }
      }
    }
  }
}

.proposal {

  .supports {
    @include supports;
    border: 1px solid $proposals-border;
    margin: 0 rem-calc(-12);

    @media (min-width: $small-breakpoint) {
      border-top-left-radius: 3px;
      border-bottom-left-radius: 3px;
      margin: 0 rem-calc(-25) 0 rem-calc(12);
    }

    &:after {
      content: none;
      position: absolute;
      display: block;
      border-style: solid;
      border-color: #664212 transparent transparent transparent;
      bottom: -14px;
      border-left-width: 0;
      border-right-color: transparent;
      right: -1px;
      border-width: 13px 13px 0 0;

      @media (min-width: $small-breakpoint) {
        content: "";
      }
    }

    .total-supports {
      display: inline-block;
      line-height: $line-height;
      padding-top: rem-calc(12);
      vertical-align: top;

      @media (min-width: $small-breakpoint) {
        display: block;
        float: none;
        margin-left: 0;
        padding-top: 0;
      }
    }
  }
}

// 05. Featured
// - - - - - - - - - - - - - - - - - - - - - - - - -

.featured-debates, .featured-proposals {
  padding: $line-height/2 0;

  @media (min-width: $small-breakpoint) {
    margin-left: 0 !important;
    margin-right: 0 !important;
  }

  h2 {
    font-size: $small-font-size;
    line-height: $line-height;
    text-transform: uppercase;
  }

  h3 {
    margin-bottom: 0;

    a {
      color: $text;
      font-size: $h3-font-size;
    }
  }

  a, .info {
    color: lighten($text, 15%);
    font-size: $small-font-size;
  }

}

.featured-debates {
  background: $highlight;
}

.featured-proposals {
  background: $featured;

  .supports {
    @include supports;
    background: none;
    border: 0;
    padding-bottom: 0;
    padding-top: 0;

    &:after {
      content: none;
    }

    .total-supports {
      display: none;
    }

    .button-support {
      margin-top: 0;
    }

    .not-logged, .organizations-votes {
      background: $featured;
      color: $warning-color;
      font-size: $small-font-size;
      line-height: rem-calc(24);
      padding-top: rem-calc(6);

      a {
        color: $warning-color;
        font-weight: bold;
      }
    }

    .anonymous-votes {
      background: $featured;

      p {
        color: $text;
        font-size: $small-font-size;
        line-height: $line-height;
      }
    }

    .organizations-votes p {
      color: $text;
      line-height: rem-calc(24);
      padding-top: rem-calc(6);
      text-align: center;
    }

    .supported {
      margin-top: 0;
    }

    .share-supported {

      .social-share-button-twitter,
      .social-share-button-facebook,
      .social-share-button-google_plus {
        height: rem-calc(33);

        &:before {
          font-size: rem-calc(18);
          line-height: rem-calc(33);
        }
      }
    }
  }
}

.home-page-featured {

  .panel {

    &.featured-one, &.featured-two {
      background-size: cover;
      background-position: 50% 50%;
      border: 0;
      min-height: $line-height*10;

      .button {
        background: white;
        bottom: 48px;
        color: $text;
        position: absolute;
      }
    }

    &.featured-one {
      background: $featured image-url('welcome_featured_1.jpg') no-repeat;
    }

    &.featured-two {
      background: #33DADF image-url('processes_plaza_espana.png') no-repeat;
      background-position: top right;

      a:hover {
        text-decoration: none;
      }

      h2, p {
        color: white;
      }
    }
  }
}

.featured-process {
  background: #33DADF image-url('processes_plaza_espana_small.png') no-repeat;
  background-position: right;
  padding: $line-height/2;

  @media (min-width: $small-breakpoint) {
    margin-left: 0 !important;
    margin-right: 0 !important;
    margin-top: $line-height !important;
  }

  h2, h3, a {
    color: white;
    margin: 0;
  }

  a:hover h2, a:hover h3 {
    color: white !important;
    text-decoration: none;
  }
}

.process {
  min-height: $line-height*12;

  p {
    margin: $line-height 0;
  }
}

// 06. Surveys
// - - - - - - - - - - - - - - - - - - - - - - - - -

.survey {

  .alert-box {
    margin-bottom: 0;
  }

  form input[type=radio] {
    height: $line-height !important;
    vertical-align: top;
    width: 18px\9;
  }
}

.survey-questions {

  &::before {
    display: none;
  }

  article {
    border-bottom: 1px solid $border;

    @media only screen and (min-width: $medium-breakpoint) {
      padding: $line-height 0;
    }

    &:last-of-type {
      border-bottom: none;
    }
  }

  .selections {
    display: none;
  }
}
/* ... */

